<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:ads="http://schemas.android.com/apk/lib/com.triggertrap.seekarc"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="vertical" >

        <RelativeLayout
            android:id="@+id/preset_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <Button
                    android:id="@+id/presets"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/user" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right" >

                    <ImageView
                        android:id="@+id/on_off"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="15dp"
                        android:paddingRight="15dp"
                        android:src="@drawable/off_btn" />
                </LinearLayout>
            </LinearLayout>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1" >

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="20dp"
                    android:text="@string/plus15"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:layout_centerHorizontal="true"
                    android:layout_centerInParent="true"
                    android:text="@string/zero"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:text="@string/minus15"
                    android:textSize="15sp" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="5" >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="20dp"
                        android:layout_gravity="center"
                        android:layout_marginBottom="10dp"
                        android:text="@string/h60hz"
                        android:textSize="15sp" />

                    <org.kreed.vanilla.equalizer.widget.VerticalSeekBar
                        android:id="@+id/seekBar1"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:max="30"
                        android:progress="15" />

                    <TextView
                        android:id="@+id/textViewSB1"
                        android:layout_width="wrap_content"
                        android:layout_height="20dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp"
                        android:text="@string/zero"
                        android:textSize="15sp" />
                </LinearLayout>

                <View
                    android:layout_width="0dp"
                    android:layout_height="200dp"
                    android:layout_weight="1" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="20dp"
                        android:layout_gravity="center"
                        android:layout_marginBottom="10dp"
                        android:text="@string/h230hz"
                        android:textSize="15sp" />

                    <org.kreed.vanilla.equalizer.widget.VerticalSeekBar
                        android:id="@+id/seekBar2"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:max="30"
                        android:progress="15" />

                    <TextView
                        android:id="@+id/textViewSB2"
                        android:layout_width="wrap_content"
                        android:layout_height="20dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp"
                        android:text="@string/zero"
                        android:textSize="15sp" />
                </LinearLayout>

                <View
                    android:layout_width="0dp"
                    android:layout_height="200dp"
                    android:layout_weight="1" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="20dp"
                        android:layout_gravity="center"
                        android:layout_marginBottom="10dp"
                        android:text="@string/h910hz"
                        android:textSize="15sp" />

                    <org.kreed.vanilla.equalizer.widget.VerticalSeekBar
                        android:id="@+id/seekBar3"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:max="30"
                        android:progress="15" />

                    <TextView
                        android:id="@+id/textViewSB3"
                        android:layout_width="wrap_content"
                        android:layout_height="20dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp"
                        android:text="@string/zero"
                        android:textSize="15sp" />
                </LinearLayout>

                <View
                    android:layout_width="0dp"
                    android:layout_height="200dp"
                    android:layout_weight="1" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="20dp"
                        android:layout_gravity="center"
                        android:layout_marginBottom="10dp"
                        android:text="@string/h3d60hz"
                        android:textSize="15sp" />

                    <org.kreed.vanilla.equalizer.widget.VerticalSeekBar
                        android:id="@+id/seekBar4"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:max="30"
                        android:progress="15" />

                    <TextView
                        android:id="@+id/textViewSB4"
                        android:layout_width="wrap_content"
                        android:layout_height="20dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp"
                        android:text="@string/zero"
                        android:textSize="15sp" />
                </LinearLayout>

                <View
                    android:layout_width="0dp"
                    android:layout_height="200dp"
                    android:layout_weight="1" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="20dp"
                        android:layout_gravity="center"
                        android:layout_marginBottom="10dp"
                        android:text="@string/h14d0hz"
                        android:textSize="15sp" />

                    <org.kreed.vanilla.equalizer.widget.VerticalSeekBar
                        android:id="@+id/seekBar5"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:max="30"
                        android:progress="15" />

                    <TextView
                        android:id="@+id/textViewSB5"
                        android:layout_width="wrap_content"
                        android:layout_height="20dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp"
                        android:text="@string/zero"
                        android:textSize="15sp" />
                </LinearLayout>

                <View
                    android:layout_width="0dp"
                    android:layout_height="200dp"
                    android:layout_weight="1" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <!-- <LinearLayout -->
    <!-- android:layout_width="match_parent" -->
    <!-- android:layout_height="wrap_content" -->
    <!-- android:layout_alignParentBottom="true" > -->


    <!-- <LinearLayout -->
    <!-- android:layout_width="0dp" -->
    <!-- android:layout_height="match_parent" -->
    <!-- android:layout_weight="1" -->
    <!-- android:orientation="vertical" > -->


    <!-- <TextView -->
    <!-- android:layout_width="wrap_content" -->
    <!-- android:layout_height="wrap_content" -->
    <!-- android:layout_gravity="center" -->
    <!-- android:text="@string/bass" -->
    <!-- android:textSize="13sp" /> -->
    <!-- </LinearLayout> -->


    <!-- <LinearLayout -->
    <!-- android:layout_width="0dp" -->
    <!-- android:layout_height="match_parent" -->
    <!-- android:layout_weight="1" -->
    <!-- android:orientation="vertical" > -->


    <!-- <TextView -->
    <!-- android:layout_width="wrap_content" -->
    <!-- android:layout_height="wrap_content" -->
    <!-- android:layout_gravity="center" -->
    <!-- android:text="@string/virtualizer" -->
    <!-- android:textSize="13sp" /> -->
    <!-- </LinearLayout> -->
    <!-- </LinearLayout> -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3.5"
            android:orientation="horizontal" >

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1" >

                <!-- <com.triggertrap.seekarc.SeekArc -->
                <!-- android:id="@+id/seekArc1" -->
                <!-- android:layout_width="wrap_content" -->
                <!-- android:layout_height="wrap_content" -->
                <!-- android:layout_centerInParent="true" -->
                <!-- android:padding="40dp" -->
                <!-- app1:max="100" -->
                <!-- app1:rotation="180" -->
                <!-- app1:startAngle="30" -->
                <!-- app1:sweepAngle="300" /> -->


                <!-- <com.triggertrap.seekarc.SeekArc -->
                <!-- android:id="@+id/seekArc1" -->
                <!-- android:layout_width="wrap_content" -->
                <!-- android:layout_height="wrap_content" -->
                <!-- android:layout_centerInParent="true" -->
                <!-- android:layout_margin="90dp" -->
                <!-- android:background="@drawable/eq_eq_seekbar_bass" -->
                <!-- android:padding="65dp" -->
                <!-- app1:max="100" -->
                <!-- app1:rotation="180" -->
                <!-- app1:startAngle="30" -->
                <!-- app1:sweepAngle="300" /> -->

                <SeekBar
                    android:id="@+id/seekArc1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerInParent="true"
                    android:layout_centerVertical="true"
                    android:max="100" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerInParent="true"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center"
                    android:layout_margin="0dp"
                    android:paddingTop="50dp"
                    android:text="@string/bass"
                    android:textSize="13sp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1" >

                <!-- <com.triggertrap.seekarc.SeekArc -->
                <!-- android:id="@+id/seekArc2" -->
                <!-- android:layout_width="wrap_content" -->
                <!-- android:layout_height="wrap_content" -->
                <!-- android:layout_centerInParent="true" -->
                <!-- android:padding="40dp" -->
                <!-- app1:max="100" -->
                <!-- app1:rotation="180" -->
                <!-- app1:startAngle="30" -->
                <!-- app1:sweepAngle="300" /> -->


                <!-- <com.triggertrap.seekarc.SeekArc -->
                <!-- android:id="@+id/seekArc2" -->
                <!-- android:layout_width="wrap_content" -->
                <!-- android:layout_height="wrap_content" -->
                <!-- android:layout_centerInParent="true" -->
                <!-- android:layout_margin="90dp" -->
                <!-- android:background="@drawable/eq_eq_seekbar_bass" -->
                <!-- android:padding="65dp" -->
                <!-- app1:max="100" -->
                <!-- app1:rotation="180" -->
                <!-- app1:startAngle="30" -->
                <!-- app1:sweepAngle="300" /> -->

                <SeekBar
                    android:id="@+id/seekArc2"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerInParent="true"
                    android:layout_centerVertical="true"
                    android:max="100" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerInParent="true"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center"
                    android:layout_margin="0dp"
                    android:paddingTop="50dp"
                    android:text="@string/virtualizer"
                    android:textSize="13sp" />
            </RelativeLayout>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5" />
    </LinearLayout>

    <Button
        android:id="@+id/not_touch"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/trasparent_black"
        android:clickable="false"
        android:enabled="false" />

</LinearLayout>